# gyanasuchi

./: .env.example  .gitignore  .pre-commit-config.yaml  PRESENTATION.md  QUESTIONS.md  README.md  pyproject.toml
artifacts/transcripts/: gUW8C2JJ118.txt  gvJhtBdmUi8.txt  i-rmeU-qSfU.txt
gyanasuchi/: common.py  modal.py
gyanasuchi/app/: fetch_data_from_db.py  main.py  qa_pipeline.py
gyanasuchi/bot/: qa_pipeline.py  slack_server.py  test_qa_pipeline.py
gyanasuchi/peewe_db_dataloader/: fetch_data_from_db.py
gyanasuchi/planetscale_dataloader/: fetch_data_from_db.py
gyanasuchi/scrapper/: db.py  fetch_playlist_videos.py  fetch_transcripts.py  push_to_qdrant.py  setup.py  youtube.py
