[tool.poetry]
name = "gyanasuchi"
version = "0.1.0"
description = "One who indexes knowledge"
authors = ["Karun Japhet <karunj@sahaj.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
youtube-transcript-api = "^0.6.1"
pytube = "^15.0.0"
modal = "^0.56.4326"
python-dotenv = "^1.0.0"
mysql-connector-python = "^8.2.0"
sqlalchemy = "^2.0.23"
nanoid = "^2.0.0"
langchain = "^0.0.352"
qdrant-client = "^1.7.0"
sentence-transformers = "^2.2.2"
uvicorn = "^0.25.0"
openai = "^1.6.1"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
