[tool.poetry]
name = "gyanasuchi"
version = "0.1.0"
description = "One who indexes knowledge"
authors = ["Karun Japhet <karunj@sahaj.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
youtube-transcript-api = "^0.6.1"
pytube = "^15.0.0"
modal = "^0.56.4326"
peewee = "^3.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
